Début adaptation chapitre 2 : ouverture et lecture d'un fichier

--- a/Chapitre 2 - Les fonctions et les fichiers.ipynb
+++ b/Chapitre 2 - Les fonctions et les fichiers.ipynb
@@ -44,95 +44,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "infile = open('data/romans_1:14-23_gk.txt')"
+    "fichier_ouvert = open('data/cid.v1071.1682.txt')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now print `infile`. What do you think that will happen?"
+    "Maintenant, affichons la variable `fichier_ouvert`. Que pensez-vous qu'il arrivera ? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='data/cid.v1071.1682.txt' mode='r' encoding='UTF-8'>\n"
+     ]
+    }
+   ],
    "source": [
-    "print(infile)"
+    "print(fichier_ouvert)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"Hey! That's not what I expected to happen!\", you might think. Python is not printing the contents of the file but only some mysterious mention of some `TextIOWrapper`. This `TextIOWrapper` thing is Python's way of saying it has *opened* a connection to the file `data/romans_1_gk.txt`. But it also gives us some information we should pay attention to.  Most importantly, look at the part that says `encoding=`.  If you don't see `'UTF-8` after that `=`, then you need to add another argument to your `open` statement.  Try this instead:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "infile = open('data/romans_1:14-23_gk.txt', encoding='UTF-8')\n",
-    "print(infile)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You should now see `encoding='UTF-8'` at the end of the description of the `TextIOWrapper`.  You will need to make sure to always specify your encoding as UTF-8 if you are working with Greek texts in Windows.  Linux and Mac systems should not need this, however.\n",
+    "\"Je pensais pas que ça ferait ça\" est probablement ce qui vous passe à l'esprit. Python n'affiche pas le contenu du fichier mais seulement une mention mystérieuse d'un certain `TextIOWrapper`. Ce truc de `TextIOWrapper` est la façon de Python de dire qu'il a ouvert une connexion au fichier `data/cid.v1071.1682.txt`. \n",
     "\n",
-    "Now, if we want to *read* the contents of the file we must add the function `read` as follows:"
+    "Mais cela nous donne également des informations auxquelles nous devrions prêter attention. Regardez la partie qui commence `encoding=`. `UTF-8` est le modèle d'encodage des caractères du fichier (Vous pouvez en apprendre un peu plus sur la chaine Computerphile : https://www.youtube.com/watch?v=MijmeoH9LT4 ). Par défaut, Python3 (contrairement à Python 2) gère ses données en UTF-8. On aurait pu cependant faire ce qui suit:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='data/romans_1:14-23_gk.txt' mode='r' encoding='latin'>\n"
+     ]
+    }
+   ],
    "source": [
-    "print(infile.read())"
+    "encodage_latin = open('data/cid.v1071.1682.txt', encoding='latin')\n",
+    "print(encodage_latin)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`read` is a function that operates on `TextWrapper` objects and allows us to read the contents of a file into Python. Let's assign the contents of the file to the variable `text`:"
+    "Vous avez pour `encodage_latin` `encoding='latin'` dans la description de ce `TextIOWrapper`. Vous devrez vous assurer de toujours spécifier votre encodage comme UTF-8 si vous travaillez avec des textes grecs dans Windows. Cependant, les systèmes Linux et Mac ne devraient pas en avoir besoin.\n",
+    "\n",
+    "Maintenant, si nous voulons *lire* le contenu du fichier, nous devons ajouter la fonction `read` comme suit:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Il n'est pas temps encor de chercher le trépas :\n",
+      "Ton prince et ton pays ont besoin de ton bras.\n",
+      "La flotte qu'on craignait, dans ce grand fleuve entrée,\n",
+      "Croit surprendre la ville et piller la contrée.\n",
+      "Les Mores vont descendre, et le flux et la nuit\n",
+      "Dans une heure à nos murs les amène sans bruit.\n",
+      "La Cour est en désordre, et le peuple en alarmes :\n",
+      "On n'entend que des cris, on ne voit que des larmes.\n",
+      "Dans ce malheur public mon bonheur a permis\n",
+      "Que j'ai trouvé chez moi cinq cents de mes amis,\n",
+      "Qui sachant mon affront, poussés d'un même zèle,\n",
+      "Se venaient tous offrir à venger ma querelle.\n",
+      "Tu les as prévenus ; mais leurs vaillantes mains\n",
+      "Se tremperont bien mieux au sang des Africains.\n",
+      "Va marcher à leur tête où l'honneur te demande :\n",
+      "C'est toi que veut pour chef leur généreuse bande.\n",
+      "De ces vieux ennemis va soutenir l'abord :\n",
+      "Là, si tu veux mourir, trouve une belle mort ;\n",
+      "Prends-en l'occasion, puisqu'elle t'est offerte ;\n",
+      "Fais devoir à ton roi son salut à ta perte ;\n",
+      "Mais reviens-en plutôt les palmes sur le front.\n",
+      "Ne borne pas ta gloire à venger un affront ;\n",
+      "Porte-la plus avant : force par ta vaillance\n",
+      "Ce monarque au pardon, et Chimène au silence ;\n",
+      "Si tu l'aimes, apprends que revenir vainqueur,\n",
+      "C'est l'unique moyen de regagner son coeur.\n",
+      "Mais le temps est trop cher pour le perdre en paroles ;\n",
+      "Je t'arrête en discours, et je veux que tu voles.\n",
+      "Viens, suis-moi, va combattre, et montrer à ton roi\n",
+      "Que ce qu'il perd au comte il le recouvre en toi.\n"
+     ]
+    }
+   ],
    "source": [
-    "infile = open('data/romans_1:14-23_gk.txt') #add the `encoding=UTF-8` attribute if you need it\n",
-    "text = infile.read()"
+    "print(fichier_ouvert.read())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The variable `text` now holds the contents of the file `data/romans_1:14-23_gk.txt` and we can access and manipulate it just like any other string. After we read the contents of a file, the `TextWrapper` no longer needs to be open. In fact, it is good practice to close it as soon as you do not need it anymore. Now, lo and behold, we can achieve that with the following:"
+    "`read` est une fonction qui fonctionne sur les objets` TextWrapper` et nous permet de lire le contenu d'un fichier dans Python. Assignons le contenu du fichier à la variable `texte`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "infile.close()"
+    "# Ajoutez `encoding='UTF-8'` si nécessaire\n",
+    "fichier_ouvert = open('data/cid.v1071.1682.txt') \n",
+    "texte = fichier_ouvert.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La variable `texte` contient le contenu du fichier `data/cid.v1071.1682.txt` et nous pouvons le manipuler désormais comme n'importe quelle autre chaîne. Après avoir lu le contenu d'un fichier, le `TextWrapper` n'a plus besoin d'être ouvert. En fait, il est bon de le fermer dès que vous n'en avez plus besoin. Pour ce faire, il suffit d'utiliser la méthode `close()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fichier_ouvert.close()"
    ]
   },
   {
@@ -146,27 +202,149 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Quiz!"
+    "#### Exercice"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just to recap some of the things we learned in the previous chapter. Can you write code that defines the variable `number_of_epsilons` and counts how many times the letter *ε* occurs in `text`? (Tip: use a `for` loop and an `if` statement)"
+    "Juste pour récapituler certaines des choses que nous avons apprises dans le chapitre précédent. Pouvez-vous écrire un bloc de code qui définit la variable `nombre_de_e` et compte combien de fois la lettre *e* se trouve dans le « texte »? (Astuce: utilisez une boucle `for` et une instruction `if`).\n",
+    "\n",
+    "Prenez aussi le temps de comprendre `assert` qui nous permet de vérifier vos travaux. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "On devrait trouver 180 'e'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-14949e1dbcf3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Ce code vérifiera ce que vous avez écrit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mnombre_de_e\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m180\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"On devrait trouver 180 'e'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: On devrait trouver 180 'e'"
+     ]
+    }
+   ],
+   "source": [
+    "nombre_de_e = 0\n",
+    "# Votre code ici\n",
+    "\n",
+    "# Ce code vérifiera ce que vous avez écrit\n",
+    "assert nombre_de_e == 180, \"On devrait trouver 180 'e'\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Enfin, il existe une autre syntaxe pour gérer un fichier à ouvrir et lire : il s'agit d'utiliser la déclaration `with` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_epsilons = 0\n",
-    "# insert your code here\n",
-    "        \n",
-    "# The following test should print True if your code is correct \n",
-    "print(number_of_epsilons == 44)"
+    "with open(\"data/cid.v1071.1682.txt\") as fichier_cid:\n",
+    "    texte = fichier_cid.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette méthode a cela de particulier qu'elle ferme d'elle-même le fichier qui a été ouvert. Tout comme un `if`, le with concerne l'ensemble du bloc ouvert en-dessous du `with` et permet de faire des opérations sur le fichier. On remarque l'utilisation de `as` : en français, on traduirait cette ligne en `avec le fichier ouvert cid.v1071.1682.txt en tant que variable fichier_cid`.\n",
+    "\n",
+    "Par ailleurs, les variables modifiées dans cet ensemble sont encore disponible à la fin. Mais le fichier sera clos. Pouvez-vous deviner ce qui se passera avec les lignes suivantes :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Il n'est pas temps encor de chercher le trépas :\n",
+      "Ton prince et ton pays ont besoin de ton bras.\n",
+      "La flotte qu'on craignait, dans ce grand fleuve entrée,\n",
+      "Croit surprendre la ville et piller la contrée.\n",
+      "Les Mores vont descendre, et le flux et la nuit\n",
+      "Dans une heure à nos murs les amène sans bruit.\n",
+      "La Cour est en désordre, et le peuple en alarmes :\n",
+      "On n'entend que des cris, on ne voit que des larmes.\n",
+      "Dans ce malheur public mon bonheur a permis\n",
+      "Que j'ai trouvé chez moi cinq cents de mes amis,\n",
+      "Qui sachant mon affront, poussés d'un même zèle,\n",
+      "Se venaient tous offrir à venger ma querelle.\n",
+      "Tu les as prévenus ; mais leurs vaillantes mains\n",
+      "Se tremperont bien mieux au sang des Africains.\n",
+      "Va marcher à leur tête où l'honneur te demande :\n",
+      "C'est toi que veut pour chef leur généreuse bande.\n",
+      "De ces vieux ennemis va soutenir l'abord :\n",
+      "Là, si tu veux mourir, trouve une belle mort ;\n",
+      "Prends-en l'occasion, puisqu'elle t'est offerte ;\n",
+      "Fais devoir à ton roi son salut à ta perte ;\n",
+      "Mais reviens-en plutôt les palmes sur le front.\n",
+      "Ne borne pas ta gloire à venger un affront ;\n",
+      "Porte-la plus avant : force par ta vaillance\n",
+      "Ce monarque au pardon, et Chimène au silence ;\n",
+      "Si tu l'aimes, apprends que revenir vainqueur,\n",
+      "C'est l'unique moyen de regagner son coeur.\n",
+      "Mais le temps est trop cher pour le perdre en paroles ;\n",
+      "Je t'arrête en discours, et je veux que tu voles.\n",
+      "Viens, suis-moi, va combattre, et montrer à ton roi\n",
+      "Que ce qu'il perd au comte il le recouvre en toi.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "I/O operation on closed file.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-c56f9df1c443>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexte\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfichier_cid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: I/O operation on closed file."
+     ]
+    }
+   ],
+   "source": [
+    "print(texte)\n",
+    "fichier_cid.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`I/O Operation` signifie `Input/Output` et vise les méthodes de lecture et d'écriture de fichiers. Notre fichier ayant été clos après `with`, il n'est plus possible de le lire."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ce que l'on a appris\n",
+    "\n",
+    "Pour finir cette section, voici un récapitulatif des concepts appris. Lisez la liste et posez des questions si certaines choses ne sont pas claires.\n",
+    "\n",
+    "- `open()`\n",
+    "- `UTF-8`\n",
+    "- `.close()`\n",
+    "- `.read()`\n",
+    "- le fonctionnement de `TextIOWrapper`\n",
+    "- `with ___ as ___ :`\n",
+    "- `assert ___ , ___`"
    ]
   },
   {
@@ -180,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Writing our first function"
+    "## Écrire notre première fonction"
    ]
   },
   {
