Ajout de la documentation

--- a/Chapitre 2 - Les fonctions et les fichiers.ipynb
+++ b/Chapitre 2 - Les fonctions et les fichiers.ipynb
@@ -909,62 +909,391 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Une alternative à la fonction de comptage"
+    "### Une alternative à la fonction de comptage : éviter les doublons avec `set`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's train our function writing skills a little more. We are going to write another counting function, this time using a slightly different strategy. Recall our function `count_in_list`. It takes as argument a list and the item we want to count in that list. It returns the number of times this item occurs in the list. If we call this function for each unique word in `words`, we obtain a list of frequencies, quite similar to the one we get from the function `counter`. What would happen if we just call the function `count_in_list` on each word in `words`? "
+    "Le problème de la fonction d'avant, c'est qu'elle passe sur certaines valeurs plusieurs fois et que l'on est obligé de faire un if pour que cela fonction correctement. On peut parler de code non-optimisé: une tâche est faite un bon nombre de fois sans avoir d'impact et prend du temps que l'on pourrait gagner.\n",
+    "\n",
+    "Aussi, il serait bon de savoir quels sont les valeurs uniques de la liste de mots. Pour cela, on utilise le type `set()` :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'c', 'a', 'b'}\n",
+      "{1, 2, 3, 4}\n"
+     ]
+    }
+   ],
    "source": [
     "x = ['a', 'a', 'b', 'b', 'c', 'c', 'c']\n",
     "unique_x = set(x)\n",
-    "print(unique_x)"
+    "y = [1, 1, 4, 3, 1, 2, 2, 4]\n",
+    "print(unique_x)\n",
+    "print(set(y))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using `set` we can iterate over all unique words in our word list and print the corresponding frequency:"
+    "Les sets sont des sortes de liste où les valeurs sont forcément unique. En transformant une liste en set, on supprime les doublons. Attention cependant, un set n'est pas ordonné et ne peut donc pas être accédé par des index :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object does not support indexing",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-68-55be18bd28ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_x\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'set' object does not support indexing"
+     ]
+    }
+   ],
    "source": [
-    "def counter2(list_to_search):\n",
-    "    unique_words = set(list_to_search)\n",
-    "    for word in unique_words:\n",
-    "        print(word, count_in_list(word, list_to_search))"
+    "unique_x[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A final check to see whether our function behaves correctly:"
+    "Cependant, on peut lui ajouter des valeurs. Au lieu d'utiliser `append()` on utilise `add()` :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'set' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-71-fbdd47bd6967>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_x\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"test\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0munique_x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'set' object has no attribute 'append'"
+     ]
+    }
+   ],
+   "source": [
+    "unique_x.add(\"test\")\n",
+    "unique_x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A partir de cela, on peut faire une fonction plus simple:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "counter2(words)"
+    "def comptage2(mots):\n",
+    "    sans_doublon = set(mots)\n",
+    "    compteur = {}\n",
+    "    for mot in sans_doublon:\n",
+    "        compteur[mot] = mots.count(mot)\n",
+    "        print(mot)\n",
+    "    return compteur"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On vérifie que cela marche :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mot\n",
+      "j'ai\n",
+      "doux,\n",
+      "paye\n",
+      "modeste,\n",
+      "ces\n",
+      "qui\n",
+      "plus\n",
+      "peine\n",
+      "Elle\n",
+      "de\n",
+      "vôtres\n",
+      "se\n",
+      "vois\n",
+      "grave\n",
+      "m'oblige,\n",
+      "ombres\n",
+      "loin\n",
+      "a\n",
+      "vrais\n",
+      "montrer\n",
+      "ses\n",
+      "sentiment.\n",
+      "mais\n",
+      "on\n",
+      "poids\n",
+      "jetez\n",
+      "sont\n",
+      "pris\n",
+      "fait\n",
+      "d'un\n",
+      "prétends\n",
+      "éternels\n",
+      "discours\n",
+      "cette\n",
+      "ciel\n",
+      "sagesse\n",
+      "l'amour\n",
+      "aigres\n",
+      "assurai\n",
+      "mine\n",
+      "crois\n",
+      "pour\n",
+      "intérêts.\n",
+      "dit\n",
+      "faut\n",
+      "mien\n",
+      "soi-même\n",
+      "ce\n",
+      "Pour\n",
+      "tomber\n",
+      "bat\n",
+      "point\n",
+      "l'instant,\n",
+      "Dans\n",
+      "moins\n",
+      "en\n",
+      "cris\n",
+      "pas\n",
+      "jour,\n",
+      "avoir\n",
+      "couvrir\n",
+      "sentiments\n",
+      "avant\n",
+      "faisois\n",
+      "besoin,\n",
+      "yeux\n",
+      "leçons,\n",
+      "prendre\n",
+      "tableaux\n",
+      "extérieur,\n",
+      "regarder\n",
+      "où\n",
+      "aux\n",
+      "m'attache\n",
+      "visite,\n",
+      "reste\n",
+      "condamner\n",
+      "doit\n",
+      "firent\n",
+      "remettre,\n",
+      "veut\n",
+      "vous\n",
+      "autres,\n",
+      "commis\n",
+      "avertissant\n",
+      "met\n",
+      "fut\n",
+      "honneur\n",
+      "au\n",
+      "soin.\n",
+      "l'autre\n",
+      "pures,\n",
+      "dément\n",
+      "tous,\n",
+      "dehors\n",
+      "trop\n",
+      "reconnoître,\n",
+      "êtes\n",
+      "innocentes\n",
+      "prier\n",
+      "cela,\n",
+      "par\n",
+      "faveur,\n",
+      "elle\n",
+      ":\n",
+      "nudités\n",
+      "et\n",
+      "bon,\n",
+      "mon\n",
+      "lieux\n",
+      "vous.\n",
+      "ambigu\n",
+      "d'indécence\n",
+      "furent\n",
+      "exacte\n",
+      "contre\n",
+      "votre\n",
+      "suivre,\n",
+      "affectation\n",
+      "prendre,\n",
+      "hauteur\n",
+      "tous\n",
+      "mal\n",
+      "?\n",
+      "défense,\n",
+      "publie,\n",
+      "vos\n",
+      "long\n",
+      "s'en\n",
+      "dans\n",
+      "qu'encor\n",
+      "belle.\n",
+      "conclusion\n",
+      "mettre\n",
+      "modèle\n",
+      "bruits\n",
+      "rendre\n",
+      "exemplaire\n",
+      "gens\n",
+      "mouvements\n",
+      "mines\n",
+      "commun\n",
+      "qui,\n",
+      "les\n",
+      "éclats\n",
+      "la\n",
+      "le\n",
+      "blâmé\n",
+      "tel\n",
+      "qu'on\n",
+      "quoi\n",
+      "j'en\n",
+      "réalités.\n",
+      "grâces\n",
+      "amie\n",
+      "que\n",
+      "des\n",
+      "paroître\n",
+      "bon\n",
+      "feriez\n",
+      "parler\n",
+      "fort\n",
+      "étale\n",
+      "corrections\n",
+      "m'apprenant\n",
+      "cités\n",
+      "comme\n",
+      "je\n",
+      "lieu,\n",
+      "Là,\n",
+      "temps,\n",
+      "qu'il\n",
+      "tout\n",
+      "censures\n",
+      "c'étoit\n",
+      "aussi\n",
+      "vit\n",
+      "peu\n",
+      "bien,\n",
+      "disoient-ils,\n",
+      "gens,\n",
+      "d'une\n",
+      "songer\n",
+      "un\n",
+      "dernier\n",
+      "soins\n",
+      "âme\n",
+      "très-rare\n",
+      "beaucoup\n",
+      "touche\n",
+      "leur\n",
+      "faire\n",
+      "puis\n",
+      "pitié\n",
+      "sage\n",
+      "est\n",
+      "veux\n",
+      "à\n",
+      "moi\n",
+      "fréquentes\n",
+      "parlant\n",
+      "vie\n",
+      "profitable,\n",
+      "combattirent\n",
+      "tour,\n",
+      "grand\n",
+      "zèle\n",
+      ";\n",
+      "d'estime\n",
+      "l'on\n",
+      "choses\n",
+      "vaut-il\n",
+      "En\n",
+      "ceux\n",
+      "si\n",
+      "médisance\n",
+      "dévots\n",
+      "chacun\n",
+      "Madame,\n",
+      "sur\n",
+      "qu'aux\n",
+      "point.\n",
+      "actions\n",
+      "mérite,\n",
+      "vous,\n",
+      "bien\n",
+      "franchement,\n",
+      "pruderie\n",
+      "blanc\n",
+      "l'entretien.\n",
+      "exemple\n",
+      "trouvai\n",
+      "moi,\n",
+      "d'honneur,\n",
+      "l'attribuer\n",
+      "l'innocence,\n",
+      "du\n",
+      "soin\n",
+      "secrets\n",
+      "ne\n",
+      "avis\n",
+      "peut\n",
+      "autres\n",
+      "quelques\n",
+      "cet\n",
+      "mieux\n",
+      "madame,\n",
+      "raisonnable,\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "decompte = comptage2(mots)\n",
+    "print(decompte[\"et\"])"
    ]
   },
   {
@@ -978,21 +1307,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Quiz!"
+    "### Documenter une fonction : méthode Sphinx"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have written two functions `counter` and `counter2`, both used to count for each unique item in a particular list how often it occurs in that list. Can you come up with some pros and cons for each function? Why is `counter2` better than `counter` or why is `counter` better than `counter2`?"
+    "Tout comme il est bien de documenter avec des # pourquoi vous faites certaines choses dans votre code, il est encore mieux de commenter ses fonctions. On distingue plusieurs méthodes de documentation : la documentation [reStructuredText (rst)](https://docs.python.org/devguide/documenting.html) et la documentation Google sont les plus communes. Voyons un exemple de la RST !"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def comptage2(mots):\n",
+    "    \"\"\" Compte et stocke le décompte de chaque mot dans une liste de mots\n",
+    "    \n",
+    "    :param mots: Liste de mosts\n",
+    "    :type mots: list\n",
+    "    :returns: Dictionnaire où les clefs sont les mots et les valeurs le nombre d'occurrences\n",
+    "    :rtype: dict\n",
+    "    \"\"\"\n",
+    "    sans_doublon = set(mots)\n",
+    "    compteur = {}\n",
+    "    for mot in sans_doublon:\n",
+    "        compteur[mot] = mots.count(mot)\n",
+    "    return compteur"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Double click this cell and write down your answer.*"
+    "Qu'avons-nous fait ?\n",
+    "\n",
+    "1. Nous avons utilisé le commentaire en triple guillement `\"\"\"` qui permet de faire des commentaires en multilignes.\n",
+    "2. La première ligne est consacrée à la description de ce à quoi sert la fonction\n",
+    "3. On décrit un paramètre via `:param mots:` : la syntaxe est fixe `:param ` suivi du nom de mon paramètre et de `:` puis on décrite ce paramètre, ce qui est attendu\n",
+    "4. Quand cela fait sens, on peut compléter `:param mots:` par `:type mots:` qui donne le type de données attendues (`list`, `str`, `dict`, `int`, `TextIOWrapper`, etc.)\n",
+    "5. Une fois tous les paramètres décrits, on décrit ce qui est renvoyé après `:returns:`\n",
+    "6. Quand cela fait sens, on peut compléter `:returns:` par `:rtype:` (pour *returns type*) comme pour les paramètres."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice\n",
+    "\n",
+    "Ecrire une fonction `statistiques_mots` qui prend un chemin de fichier et qui renvoie un dictionnaire de compte d'occurrences. Documentez votre fonction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Votre code ici\n",
+    "\n",
+    "\n",
+    "# Cette portion vérifie que votre code fonction\n",
+    "# En finissant la ligne par un \"\\\", on échappe le saut de ligne\n",
+    "assert statistiques_mots(\"data/liaisons.118.txt\")[\"et\"] == 15, \\\n",
+    "    \"Il y a 52 occurrences de et dans le texte du fichier W\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "\n",
+    "#### Ce que l'on a appris\n",
+    "\n",
+    "Pour finir cette section, voici un récapitulatif des concepts appris. Lisez la liste et posez des questions si certaines choses ne sont pas claires.\n",
+    "\n",
+    "- `def`\n",
+    "- paramètes et argument\n",
+    "- portée des variables (*scope*)\n",
+    "- documentation reStructuredText\n",
+    "- `set()`"
    ]
   },
   {
