Début cours CSV

--- a/Chapitre 4 - Les fichiers CSV et JSON.ipynb
+++ b/Chapitre 4 - Les fichiers CSV et JSON.ipynb
@@ -4,7 +4,194 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapitre 4 - Les fichiers CSV et JSON"
+    "# Chapitre 4 - Les fichiers CSV, les fichiers JSON et les requêtes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rappel : ce qu'est un fichier CSV\n",
+    "\n",
+    "Un fichier CSV est un fichier de tableau simplifié au maximum :\n",
+    "- le fichier est encodé en plein texte, il peut être lu par un éditeur de texte lambda\n",
+    "- le fichier utilise un séparateur de colonnes (usuellement une virgule, un point-virgule ou une tabulation)\n",
+    "- le fichier utilise une ligne par ligne de tableur\n",
+    "\n",
+    "Exemple : [Les 1000 premiers numéros du Gaulois en statistiques](./data/csv/gaulois.csv) (Grâce à la [BNF](http://api.bnf.fr/m%C3%A9tadonn%C3%A9es-quantitatives-de-la-presse-ancienne-xixe-xxe-si%C3%A8cles#chapitre3) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Les Packages\n",
+    "Python est fait de nombreuses fonctions de bases. Nous avons vu par exemple qu'il était possible d'utiliser facilement les fonction `len()` ou encore `print()`. Mais Python possède aussi des `packages` (le nom des librairies et bibliothèques en Python) par défault.\n",
+    "\n",
+    "Un package est un ensemble de modules comportant des outils tels que des fonctions et qui peuvent être assez simplement importés. Par exemple, si je voulais travailler avec le package standard pour utiliser des fichiers CSV, je ferai :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette ligne va me permettre d'importer le module csv. Regardons ce qu'il a dans le ventre :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Dialect',\n",
+       " 'DictReader',\n",
+       " 'DictWriter',\n",
+       " 'Error',\n",
+       " 'QUOTE_ALL',\n",
+       " 'QUOTE_MINIMAL',\n",
+       " 'QUOTE_NONE',\n",
+       " 'QUOTE_NONNUMERIC',\n",
+       " 'Sniffer',\n",
+       " 'StringIO',\n",
+       " '_Dialect',\n",
+       " '__all__',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '__version__',\n",
+       " 'excel',\n",
+       " 'excel_tab',\n",
+       " 'field_size_limit',\n",
+       " 'get_dialect',\n",
+       " 'list_dialects',\n",
+       " 're',\n",
+       " 'reader',\n",
+       " 'register_dialect',\n",
+       " 'unix_dialect',\n",
+       " 'unregister_dialect',\n",
+       " 'writer']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(csv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "C'est bien mais ca ne vous dit pas grand chose non ? On voit à la limite quelque chose pour lire (`reader`) et quelque chose pour écrire (`writer`) avec *a priori* deux variations : `DictReader` et `DictWriter`. Mais cela reste vague. Heureusement, python propose pour ses librairies standards une très bonne documentation : https://docs.python.org/3.5/library/csv.html\n",
+    "\n",
+    "Je reprends ci-dessous deux morceaux de la documentation, qui sont ceux qui vont d'abord nous intéresser. Commencons par ce qui est la documentation de `reader()`\n",
+    "\n",
+    "\n",
+    "#### csv.reader(csvfile, dialect=’excel’, **fmtparams)\n",
+    "\n",
+    "> Return a reader object which will iterate over lines in the given `csvfile`. `csvfile` can be any object which supports the iterator protocol and returns a string each time its `__next__()` method is called — file objects and list objects are both suitable. If csvfile is a file object, it should be opened with newline=''. [1] An optional `dialect` parameter can be given which is used to define a set of parameters specific to a particular CSV dialect. It may be an instance of a subclass of the Dialect class or one of the strings returned by the list_dialects() function. The other optional `fmtparams` keyword arguments can be given to override individual formatting parameters in the current dialect. For full details about the dialect and formatting parameters, see section [Dialects and Formatting Parameters](https://docs.python.org/3.5/library/csv.html#dialects-and-formatting-parameters).\n",
+    "\n",
+    "> Each row read from the csv file is returned as a list of strings. No automatic data type conversion is performed unless the QUOTE_NONNUMERIC format option is specified (in which case unquoted fields are transformed into floats).\n",
+    "\n",
+    "> A short usage example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Spam', 'Spam', 'Spam', 'Spam', 'Spam', 'Baked Beans']\n",
+      "Spam, Spam, Spam, Spam, Spam, Baked Beans\n",
+      "['Spam', 'Lovely Spam', 'Wonderful Spam']\n",
+      "Spam, Lovely Spam, Wonderful Spam\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "with open('data/csv/eggs.csv', newline='') as csvfile:\n",
+    "    spamreader = csv.reader(csvfile, delimiter=' ', quotechar='|')\n",
+    "    for row in spamreader:\n",
+    "        print(row)\n",
+    "        print(', '.join(row))\n",
+    "# Spam, Spam, Spam, Spam, Spam, Baked Beans\n",
+    "# Spam, Lovely Spam, Wonderful Spam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**À partir de cette documentation et de cet exemple**, on peut tirer plusieurs conclussions :\n",
+    "\n",
+    "- `csv.reader()` prend comme premier argument un fichier ouvert\n",
+    "- il peut prendre un `dialect` ou des paramètres qui ne sont pas développés par la documentation de la fonction elle-même : dans `**fmtparamas`, `**` signifie qu'il existe d'autres paramètres optionnels nominatifs.\n",
+    "- il arrive que, sans aller dans *Dialects and Formatting Parameters*, nous avons deux exemples de ces paramètres dans l'exemple :\n",
+    "    - `delimiter` qui semble être un délimiteur de colonne.\n",
+    "    - `quotechar` qui semble être un \"encapsulateur\" permettant d'échapper les délimiteurs\n",
+    "    \n",
+    "Regardons le fichier [data/csv/eggs.csv](data/csv/eggs.csv)\n",
+    "\n",
+    "En lancant l'exemple, on s'apercoit que le `reader` va renvoyer une liste quand on va itérer dessus: ces listes correspondent aux lignes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Exercice \n",
+    "\n",
+    "Lire le fichier gaulois.csv, compter le nombre de publicité en colonne 1 sur les 1000 premiers numéros du fichier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### csv.writer(csvfile, dialect=’excel’, **fmtparams)\n",
+    "\n",
+    ">    Return a writer object responsible for converting the user’s data into delimited strings on the given file-like object. csvfile can be any object with a write() method. If csvfile is a file object, it should be opened with newline='' [1]. An optional dialect parameter can be given which is used to define a set of parameters specific to a particular CSV dialect. It may be an instance of a subclass of the Dialect class or one of the strings returned by the list_dialects() function. The other optional fmtparams keyword arguments can be given to override individual formatting parameters in the current dialect. For full details about the dialect and formatting parameters, see section Dialects and Formatting Parameters. To make it as easy as possible to interface with modules which implement the DB API, the value None is written as the empty string. While this isn’t a reversible transformation, it makes it easier to dump SQL NULL data values to CSV files without preprocessing the data returned from a cursor.fetch* call. All other non-string data are stringified with str() before being written.\n",
+    "\n",
+    "> A short usage example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "with open('data/csv/eggs.csv', 'w', newline='') as csvfile:\n",
+    "    spamwriter = csv.writer(csvfile, delimiter=' ',\n",
+    "                            quotechar='|', quoting=csv.QUOTE_MINIMAL)\n",
+    "    spamwriter.writerow(['Spam'] * 5 + ['Baked Beans'])\n",
+    "    spamwriter.writerow(['Spam', 'Lovely Spam', 'Wonderful Spam'])"
    ]
   }
  ],
